--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "drupal/features": "^2.10",
         "drupal/node_export": "^3.1",
         "drupal/strongarm": "^2.0",
+        "drupal/zen": "^6.4",
         "drush/drush": "~8.0",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
